--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_executable(example main.cpp)
-target_link_libraries(example PRIVATE sfml-graphics)
+target_link_libraries(example PRIVATE ImGui-SFML::ImGui-SFML)
 
 
 # Copy DLLs needed for runtime on Windows
@@ -7,6 +7,7 @@ if(WIN32)
     if (BUILD_SHARED_LIBS)
         add_custom_command(TARGET example POST_BUILD
                 COMMAND ${CMAKE_COMMAND} -E copy_if_different
+                $<TARGET_FILE:ImGui-SFML::ImGui-SFML>
                 $<TARGET_FILE:sfml-graphics>
                 $<TARGET_FILE:sfml-window>
                 $<TARGET_FILE:sfml-system>
